fixed too big hover area for logo frontend topbar

--- a/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/admin/admin.less
+++ b/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/admin/admin.less
@@ -1185,9 +1185,11 @@
 		}
 	}
 	&__topbar-frontend-logo {
+		max-height: 35px;
 		width: 40px;
 		svg {
 			width: 100%;
+			height: auto;
 		}
 	}		
 	&__topbar-frontend-view-dashboard-link {
